force-app/main/default/objects/Opportunity/fields/Presenting_Method__c.field-meta.xml
<CustomField>
    <fullName>Presenting_Method__c</fullName>
    <description>Ways to Present to Contact</description>
    <label>Presentation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>