force-app/main/default/objects/Opportunity/fields/Previous_Year_Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Total_Leads__c</fullName>
    <label>Previous Year Total Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>