force-app/main/default/objects/Opportunity/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>Primary_Contact__r.Id</formula>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>