force-app/main/default/objects/Opportunity/fields/Primary_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Domain__c</fullName>
    <description>MI partner email domain name</description>
    <inlineHelpText>The email domain for this company example @quickenloans.com</inlineHelpText>
    <label>Primary Email Domain</label>
    <length>250</length>
    <type>Text</type>
</CustomField>