force-app/main/default/objects/Opportunity/fields/Print_Material__c.field-meta.xml
<CustomField>
    <fullName>Print_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the company use print materials to promote our offer?  (flyers, posters, fatheads, etc.)</inlineHelpText>
    <label>Print Material</label>
    <type>Checkbox</type>
</CustomField>