force-app/main/default/objects/Opportunity/fields/Print_Material_Detail__c.field-meta.xml
<CustomField>
    <fullName>Print_Material_Detail__c</fullName>
    <label>Print Material Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>