force-app/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd Fixed</fullName>
            </value>
            <value>
                <fullName>2nd Heloc</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>