force-app/main/default/objects/Opportunity/fields/Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>