force-app/main/default/objects/Opportunity/fields/Proposed_Underwriting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Underwriting_Fee__c</fullName>
    <description>New proposed underwriting Fee</description>
    <inlineHelpText>What is the proposed Underwriting Fee</inlineHelpText>
    <label>Proposed Underwriting Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>