force-app/main/default/objects/Opportunity/fields/QL_Lead__c.field-meta.xml
<CustomField>
    <fullName>QL_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QL Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Legal Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>