force-app/main/default/objects/Opportunity/fields/QL_Name__c.field-meta.xml
<CustomField>
    <fullName>QL_Name__c</fullName>
    <inlineHelpText>Name used in Quicken Loans</inlineHelpText>
    <label>QL Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>