force-app/main/default/objects/Opportunity/fields/Re_engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_engagement_Date__c</fullName>
    <inlineHelpText>Date to re-engage with the prospect</inlineHelpText>
    <label>Re-engagement Date</label>
    <type>Date</type>
</CustomField>