force-app/main/default/objects/Opportunity/fields/Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_Regional_Director</relationshipName>
    <type>Lookup</type>
</CustomField>