force-app/main/default/objects/Opportunity/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>Populates the date when the Opportunity is Rejected by Regional Director</description>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>