force-app/main/default/objects/Opportunity/fields/Relocation_Team_Member_MI_Only__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Team_Member_MI_Only__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to identify if a Relocation team member was responsible for securing the MI business</description>
    <inlineHelpText>Choose team member if this partnership came from Relocation</inlineHelpText>
    <label>Relocation Team Member (MI Only)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>