force-app/main/default/objects/Opportunity/fields/Resources_Needed__c.field-meta.xml
<CustomField>
    <fullName>Resources_Needed__c</fullName>
    <description>Field used by B2B Oppty</description>
    <label>Resources Needed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>