force-app/main/default/objects/Opportunity/fields/Secondary_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to User, Secondary Account Manager for B2B Oppty</description>
    <label>Secondary Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecondAccountManager</relationshipName>
    <type>Lookup</type>
</CustomField>