force-app/main/default/objects/Opportunity/fields/Service_Member_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Service_Member_Greeting__c</fullName>
    <label>Service Member Greeting</label>
    <length>250</length>
    <type>Text</type>
</CustomField>