force-app/main/default/objects/Opportunity/fields/Servicing_Book__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Book__c</fullName>
    <inlineHelpText>Number of clients the lending institution services</inlineHelpText>
    <label>Servicing Book</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>