force-app/main/default/objects/Opportunity/fields/Shared_Email_E_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Shared_Email_E_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Multi-partner email (non-dedicated)</inlineHelpText>
    <label>Group Email</label>
    <type>Checkbox</type>
</CustomField>