force-app/main/default/objects/Opportunity/fields/Shared_Email_E_Newsletter_Details__c.field-meta.xml
<CustomField>
    <fullName>Shared_Email_E_Newsletter_Details__c</fullName>
    <label>Group Email Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>