force-app/main/default/objects/Opportunity/fields/Signing_AE__c.field-meta.xml
<CustomField>
    <fullName>Signing_AE__c</fullName>
    <description>Account Executive when the Opportunity is marked as Active.</description>
    <label>Signing AE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>