force-app/main/default/objects/Opportunity/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>