force-app/main/default/objects/Opportunity/fields/Social_Media_Details__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Details__c</fullName>
    <label>Social Media Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>