force-app/main/default/objects/Opportunity/fields/Solo_Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Solo_Email_Frequency__c</fullName>
    <label>Solo Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>