force-app/main/default/objects/Opportunity/fields/Spanish_Content_Needed__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Content_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish Content Needed</label>
    <type>Checkbox</type>
</CustomField>