force-app/main/default/objects/Opportunity/fields/Specialized_Web_Placement1__c.field-meta.xml
<CustomField>
    <fullName>Specialized_Web_Placement1__c</fullName>
    <label>Specialized Web Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>