force-app/main/default/objects/Opportunity/fields/Specialized_Web_Placement__c.field-meta.xml
<CustomField>
    <fullName>Specialized_Web_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Giving our offer enhanced placement above and beyond our offer posting (eg:banner ad)</inlineHelpText>
    <label>Specialized Web Placement</label>
    <type>Checkbox</type>
</CustomField>