force-app/main/default/objects/Opportunity/fields/Specialized_Web_Placement_Details__c.field-meta.xml
<CustomField>
    <fullName>Specialized_Web_Placement_Details__c</fullName>
    <label>Specialized Web Placement Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>