force-app/main/default/objects/Opportunity/fields/Sponsorship_Details__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Details__c</fullName>
    <label>Sponsorship Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>