force-app/main/default/objects/Opportunity/fields/Sponsorship_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Paid_Date__c</fullName>
    <label>Sponsorship Paid Date</label>
    <type>Date</type>
</CustomField>