force-app/main/default/objects/Opportunity/fields/Stage_Validation_Override__c.field-meta.xml
<CustomField>
    <fullName>Stage_Validation_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, will override the stage validation rules.</description>
    <label>Stage Validation Override</label>
    <type>Checkbox</type>
</CustomField>