force-app/main/default/objects/Opportunity/fields/StateLookup__c.field-meta.xml
<CustomField>
    <fullName>StateLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State/Province Lookup</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_State</relationshipName>
    <type>Lookup</type>
</CustomField>