force-app/main/default/objects/Opportunity/fields/Status_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Status_Next_Steps__c</fullName>
    <label>Status/Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>