force-app/main/default/objects/Opportunity/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Dependency on Status (Stage)</description>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contract Out</fullName>
            </value>
            <value>
                <fullName>QL Terminated</fullName>
            </value>
            <value>
                <fullName>No Formal Relocation Program</fullName>
            </value>
            <value>
                <fullName>Less than Required Domestic Moves</fullName>
            </value>
            <value>
                <fullName>Joint Venture with Other Lender</fullName>
            </value>
            <value>
                <fullName>Less than Required Employees</fullName>
            </value>
            <value>
                <fullName>QL Not Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>