force-app/main/default/objects/Opportunity/fields/Sweepstakes__c.field-meta.xml
<CustomField>
    <fullName>Sweepstakes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will the company promote a sweepstakes to their employees?</inlineHelpText>
    <label>Sweepstakes</label>
    <type>Checkbox</type>
</CustomField>