force-app/main/default/objects/Opportunity/fields/Sweepstakes_Details__c.field-meta.xml
<CustomField>
    <fullName>Sweepstakes_Details__c</fullName>
    <label>Sweepstakes Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>