force-app/main/default/objects/Opportunity/fields/Target_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Live_Date__c</fullName>
    <label>Target Live Date</label>
    <type>Date</type>
</CustomField>