force-app/main/default/objects/Opportunity/fields/Team_Budget__c.field-meta.xml
<CustomField>
    <fullName>Team_Budget__c</fullName>
    <label>Team Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>