force-app/main/default/objects/Opportunity/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the team leader</description>
    <label>Team Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>