force-app/main/default/objects/Opportunity/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look Up to Account for Third Party</description>
    <label>Third Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Opportunities</relationshipLabel>
    <relationshipName>ThirdParty</relationshipName>
    <type>Lookup</type>
</CustomField>