force-app/main/default/objects/Opportunity/fields/Third_Party_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Third Party Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>