force-app/main/default/objects/Opportunity/fields/Third_Party_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Primary_Contact_Email__c</fullName>
    <formula>Third_Party_Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Party Primary Contact Email</label>
    <type>Text</type>
</CustomField>