force-app/main/default/objects/Opportunity/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <inlineHelpText>Tier 1: Active, managed
Tier 2: Active, non-managed
Tier 3: Active, 3rd party</inlineHelpText>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>