force-app/main/default/objects/Opportunity/fields/Total_Business_Days_in_Current_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Total_Business_Days_in_Current_Quarter__c</fullName>
    <formula>((5 * ( FLOOR( ( DATE(YEAR(TODAY()), CASE(CEILING( MONTH ( TODAY() ) / 3 ),1,3,2,6,3,9,12),CASE(CEILING( MONTH ( TODAY ()) / 3 ),1,31,4,31,30))- DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(YEAR(TODAY()), CASE(CEILING( MONTH ( TODAY ()) / 3 ),1,3,2,6,3,9,12),CASE(CEILING( MONTH ( TODAY() ) / 3 ),1,31,4,31,30)) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATE(YEAR(TODAY()), CASE(CEILING( MONTH ( TODAY() ) / 3 ),1,1,2,4,3,7,10),1) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATE(YEAR(TODAY()), CASE(CEILING( MONTH ( TODAY() ) / 3 ),1,1,2,4,3,7,10),1) - DATE( 1900, 1, 8), 7 ) ) ))+
CASE(
MOD(DATE(YEAR(TODAY()), CASE(CEILING( MONTH ( TODAY ()) / 3 ),1,3,2,6,3,9,12),CASE(CEILING( MONTH ( TODAY() ) / 3 ),1,31,4,31,30)) - DATE( 1900, 1, 7 ), 7 ),
0,0,
6,0,
1)-1</formula>
    <label>Total Business Days in Current Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>