force-app/main/default/objects/Opportunity/fields/Total_Inbound_International__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_International__c</fullName>
    <label>Total Inbound International</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>