force-app/main/default/objects/Opportunity/fields/Total_Unit_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Opportunity__c</fullName>
    <label>Total Unit Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>