force-app/main/default/objects/Opportunity/fields/Total_US_Domestic_Moves__c.field-meta.xml
<CustomField>
    <fullName>Total_US_Domestic_Moves__c</fullName>
    <label>Total US Domestic Moves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>