force-app/main/default/objects/Opportunity/fields/Total_US_Program_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_US_Program_Size__c</fullName>
    <label>Total US Program Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>