force-app/main/default/objects/Opportunity/fields/Total_US_Renters__c.field-meta.xml
<CustomField>
    <fullName>Total_US_Renters__c</fullName>
    <label>Total US Renters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>