force-app/main/default/objects/Opportunity/fields/Underwriting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Fee__c</fullName>
    <label>Underwriting Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>