force-app/main/default/objects/Opportunity/fields/Verbal_Date__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Date__c</fullName>
    <description>select the verbal confirmation date</description>
    <label>Verbal Date</label>
    <type>Date</type>
</CustomField>