force-app/main/default/objects/Opportunity/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will the company offer a dedicated QL webinar to their employees?</inlineHelpText>
    <label>Webinar</label>
    <type>Checkbox</type>
</CustomField>