force-app/main/default/objects/Opportunity/fields/Webinar_Details__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Details__c</fullName>
    <label>Webinar Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>