force-app/main/default/objects/Opportunity/fields/Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will the partner send out an email introducing our benefit?</inlineHelpText>
    <label>Welcome Email</label>
    <type>Checkbox</type>
</CustomField>