force-app/main/default/objects/Opportunity/fields/Welcome_Email_Details__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Details__c</fullName>
    <label>Welcome Email Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>