force-app/main/default/objects/Opportunity/fields/Who_Sends_Leads__c.field-meta.xml
<CustomField>
    <fullName>Who_Sends_Leads__c</fullName>
    <label>Who Sends Leads</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RMC</fullName>
            </value>
            <value>
                <fullName>Corporate/Government</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
            </value>
            <value>
                <fullName>LCM Relo Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>