force-app/main/default/objects/Opportunity/fields/Word_Blurb__c.field-meta.xml
<CustomField>
    <fullName>Word_Blurb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Word Blurb</label>
    <type>Checkbox</type>
</CustomField>