force-app/main/default/objects/Opportunity/fields/Word_Blurb_Details__c.field-meta.xml
<CustomField>
    <fullName>Word_Blurb_Details__c</fullName>
    <label>Word Blurb Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>